--- a/main.css
+++ b/main.css
@@ -88,5 +88,26 @@ body {
       align-content: center;
       justify-content: center;   
   }
+#Portafolio{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.proyecto{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.proyecto_columna{
+    margin: 30px;
+    width: 24%;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-color: #fff;
+  box-shadow: 0px 90px 160px 0px rgba(2, 0, 100, 0.5);
+  border-radius: 24px;
+  padding: 0 32px;
+}
 
