--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ body {
       align-content: center;
       justify-content: center;   
   }
-#Portafolio{
+.título{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -109,12 +109,6 @@ body {
   box-shadow: 0px 90px 160px 0px rgba(2, 0, 100, 0.5);
   border-radius: 24px;
   padding: 0 32px;
-}
-
-#cerca{
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 
