--- a/main.css
+++ b/main.css
@@ -215,5 +215,30 @@ body {
   border-radius: 15px;
   padding: 0 32px;
 }
+li a img{
+  width: 20px;
+  height: 20px;
+}
+a{
+  text-decoration: none;
+  color: #000;
+  
+}
+.feo{
+  text-decoration: none;
+}
+li{
+  list-style-type: none;
+}
 
-
+.contenedor_nuevo{
+  margin: 30px;
+  width: 15%;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-color: #fff;
+  box-shadow: 0px 90px 160px 0px rgba(2, 0, 100, 0.5);
+  border-radius: 15px;
+  padding: 0 32px;
+}
