--- a/main.css
+++ b/main.css
@@ -237,7 +237,7 @@ li{
   text-align: center;
   background-repeat: no-repeat;
   background-position: bottom center;
-  background-color: #fff;
+  background-color: #298eec;
   box-shadow: 0px 90px 160px 0px rgba(2, 0, 100, 0.5);
   border-radius: 15px;
   padding: 0 32px;
